# dida-mcp

./: .env.example  .gitignore  LICENSE  PROMOTION.md  README.md  pyproject.toml
openclaw/: TOOLS.md
src/dida_mcp/: __init__.py  auth.py  cli.py  client.py  server.py
